# image_localization_project

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
include/: CambridgeLandmarks.h  KDTree.h  NewtonsMethod.h  OptimalRotationSolver.h  Regression.h  Space.h  aachen.h  calibrate.h  functions.h  imageMatcher.h  imageMatcher_Orb.h  poseEstimation.h  processing.h  sevenScenes.h  synthetic.h
src/: Calibrate.cpp  CambridgeLandmarks.cpp  KDTree.cpp  NewtonsMethod.cpp  OptimalRotationSolver.cpp  Regression.cpp  Space.cpp  aachen.cpp  calibrate.cpp  functions.cpp  imageMatcher.cpp  imageMatcher_Orb.cpp  poseEstimation.cpp  processing.cpp  scrap.txt  sevenScenes.cpp  synthetic.cpp
synthetic_data/Chicago_data-master-97f54aaa7a230f0ee2305a71659da7311c771fcd/: CMakeLists.txt  dataGenerator.h  main.cpp
